--- a/Phones/Views/ModelTable/Companies.cshtml
+++ b/Phones/Views/ModelTable/Companies.cshtml
@@ -64,15 +64,15 @@
                 event.preventDefault();
                 $('#adderrors').empty();
                 $(".addInput").val("");
-                $(".display-mode").css('display', 'none');
-                $(".edit-on").attr("disabled", true);
+                $("#addButton").css('display', 'none');
+                $(".display-mode").attr("disabled", true);
                 $("#editform").css('display', 'none');
                 $("#addform").css('display', 'block');
             });
             $(".display-on").click(function (event) {
                 event.preventDefault();
-                $(".display-mode").css('display', 'block');
-                $(".edit-on").attr("disabled", false);
+                $("#addButton").css('display', 'block');
+                $(".display-mode").attr("disabled", false);
                 $("#addform").css('display', 'none');
                 $("#editform").css('display', 'none');
             });
@@ -89,13 +89,12 @@
                         $("#editLocation").val(data.Location);
                         var date = new Date(Date.parse(data.DateOfFoundation));
                         var yyyy = date.getFullYear().toString();
-                        var mm = (date.getMonth() + 1).toString(); // getMonth() is zero-based         
+                        var mm = (date.getMonth() + 1).toString();      
                         var dd = date.getDate().toString();           
-                        console.log(yyyy + '-' + (mm[1] ? mm : "0" + mm[0]) + '-' + (dd[1] ? dd : "0" + dd[0]));
                         $("#editDate").val(date.getFullYear() + '-' + (mm[1] ? mm : "0" + mm[0]) + '-' + (dd[1] ? dd : "0" + dd[0]));
                         $("#editActive").prop("checked", data.Active);
-                        $(".display-mode").css('display', 'none');
-                        $(".edit-on").attr("disabled", true);
+                        $("#addButton").css('display', 'none');
+                        $(".display-mode").attr("disabled", true);
                         $("#addform").css('display', 'none');
                         $("#editform").css('display', 'block');
                     }
@@ -122,8 +121,8 @@
                                     grid.Column("Location", "Штаб-квартира"),
                                     grid.Column("DateOfFoundation", "Дата основания", format: item => item.DateOfFoundation.Date.ToLongDateString()),
                                     grid.Column("Active" ,header: "Активно", format: item => item.Active ? "Да" : "Нет"),
-                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-info btn-sm edit-on">Редактировать</button>
-                                                               <button id="@item.ID" class="btn btn-danger btn-sm delete-btn">Удалить</button></text>)))
+                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-info btn-sm edit-on display-mode">Редактировать</button>
+                                                               <button id="@item.ID" class="btn btn-danger btn-sm delete-btn display-mode">Удалить</button></text>)))
 
 <div>
     <form id="addform">
@@ -145,8 +144,8 @@
                 <td></td>
             </tr>
         </table>
-        <button id="saveAdd" class="btn btn-primary">Сохранить</button>
-        <button class="btn btn-danger display-on">Отмена</button>
+        <button id="saveAdd" class="btn btn-primary btn-sm">Сохранить</button>
+        <button class="btn btn-danger btn-sm display-on">Отмена</button>
     </form>
 
     <form id="editform">
@@ -168,8 +167,8 @@
                 <td></td>
             </tr>
         </table>
-        <button id="saveEdit" class="btn btn-primary">Сохранить</button>
-        <button class="btn btn-danger display-on">Отмена</button>
+        <button id="saveEdit" class="btn btn-primary btn-sm">Сохранить</button>
+        <button class="btn btn-danger btn-sm display-on">Отмена</button>
     </form>
 </div>
 
