--- a/Phones/Views/ModelTable/Companies.cshtml
+++ b/Phones/Views/ModelTable/Companies.cshtml
@@ -15,7 +15,7 @@
         function addErrors(jsObj, field, mode) {
             if (jsObj['ModelState'][field]) {
                 $.each(jsObj['ModelState'][field], function (index, item) {
-                    $('#'+mode+'errors').append("<p>" + item + "</p>");
+                    $('#' + mode + 'errors').append("<p>" + item + "</p>");
                 });
             }
         };
@@ -66,15 +66,15 @@
                 $(".addInput").val("");
                 $("#addButton").css('display', 'none');
                 $(".display-mode").attr("disabled", true);
-                $("#editform").css('display', 'none');
-                $("#addform").css('display', 'block');
+                $("#editPanel").css('display', 'none');
+                $("#addPanel").css('display', 'block');
             });
             $(".display-on").click(function (event) {
                 event.preventDefault();
                 $("#addButton").css('display', 'block');
                 $(".display-mode").attr("disabled", false);
-                $("#addform").css('display', 'none');
-                $("#editform").css('display', 'none');
+                $("#addPanel").css('display', 'none');
+                $("#editPanel").css('display', 'none');
             });
             $(".edit-on").click(function (event) {
                 event.preventDefault();
@@ -89,14 +89,14 @@
                         $("#editLocation").val(data.Location);
                         var date = new Date(Date.parse(data.DateOfFoundation));
                         var yyyy = date.getFullYear().toString();
-                        var mm = (date.getMonth() + 1).toString();      
-                        var dd = date.getDate().toString();           
+                        var mm = (date.getMonth() + 1).toString();
+                        var dd = date.getDate().toString();
                         $("#editDate").val(date.getFullYear() + '-' + (mm[1] ? mm : "0" + mm[0]) + '-' + (dd[1] ? dd : "0" + dd[0]));
                         $("#editActive").prop("checked", data.Active);
                         $("#addButton").css('display', 'none');
                         $(".display-mode").attr("disabled", true);
-                        $("#addform").css('display', 'none');
-                        $("#editform").css('display', 'block');
+                        $("#addPanel").css('display', 'none');
+                        $("#editPanel").css('display', 'block');
                     }
                 });
             })
@@ -121,55 +121,64 @@
                                     grid.Column("Location", "Штаб-квартира"),
                                     grid.Column("DateOfFoundation", "Дата основания", format: item => item.DateOfFoundation.Date.ToLongDateString()),
                                     grid.Column("Active" ,header: "Активно", format: item => item.Active ? "Да" : "Нет"),
-                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-info btn-sm edit-on display-mode">Редактировать</button>
-                                                               <button id="@item.ID" class="btn btn-danger btn-sm delete-btn display-mode">Удалить</button></text>)))
+                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-primary btn-sm edit-on display-mode">Редактировать</button>
+                                        <button id="@item.ID" class="btn btn-danger btn-sm delete-btn display-mode">Удалить</button></text>)))
 
 <div>
-    <form id="addform">
-        <p><div id="adderrors" style="color:red;"></div></p>
-        <table class="table">
-            <tr>
-                <th></th>
-                <th>@Html.LabelFor(c => c.First().Name)</th>
-                <th>@Html.LabelFor(c => c.First().Location)</th>
-                <th>@Html.LabelFor(c => c.First().DateOfFoundation)</th>
-                <th>@Html.LabelFor(c => c.First().Active)</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td><input class="addInput" name="Name" /></td>
-                <td><input class="addInput" name="Location" /></td>
-                <td><input class="addInput" name="DateOfFoundation" type="date" /></td>
-                <td>@Html.CheckBox("Active")</td>
-                <td></td>
-            </tr>
-        </table>
-        <button id="saveAdd" class="btn btn-primary btn-sm">Сохранить</button>
-        <button class="btn btn-danger btn-sm display-on">Отмена</button>
-    </form>
-
-    <form id="editform">
-        <p><div id="editerrors" style="color:red;"></div></p>
-        <table class="table">
-            <tr>
-                <th></th>
-                <th>@Html.LabelFor(c => c.First().Name)</th>
-                <th>@Html.LabelFor(c => c.First().Location)</th>
-                <th>@Html.LabelFor(c => c.First().DateOfFoundation)</th>
-                <th>@Html.LabelFor(c => c.First().Active)</th>
-            </tr>
-            <tr>
-                <td><input id="editID" name="ID" readonly type="hidden" /></td>
-                <td><input id="editName" name="Name" /></td>
-                <td><input id="editLocation" name="Location" /></td>
-                <td><input id="editDate" name="DateOfFoundation" type="date"/></td>
-                <td>@Html.CheckBox("Active",new { @id = "editActive" })</td>
-                <td></td>
-            </tr>
-        </table>
-        <button id="saveEdit" class="btn btn-primary btn-sm">Сохранить</button>
-        <button class="btn btn-danger btn-sm display-on">Отмена</button>
-    </form>
+    <div id="addPanel" class="panel panel-primary">
+        <div class="panel-heading">Добавление</div>
+        <form id="addform">
+            <table class="table">
+                <tr>
+                    <th></th>
+                    <th>@Html.LabelFor(c => c.First().Name)</th>
+                    <th>@Html.LabelFor(c => c.First().Location)</th>
+                    <th>@Html.LabelFor(c => c.First().DateOfFoundation)</th>
+                    <th>@Html.LabelFor(c => c.First().Active)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input class="addInput" name="Name" /></td>
+                    <td><input class="addInput" name="Location" /></td>
+                    <td><input class="addInput" name="DateOfFoundation" type="date" /></td>
+                    <td>@Html.CheckBox("Active")</td>
+                    <td></td>
+                </tr>
+            </table>
+            <div id="adderrors" style="color:red;padding: 0 0 0 15px;"></div>
+            <div class="form-buttons">
+                <button id="saveAdd" class="btn btn-success btn-sm">Сохранить</button>
+                <button class="btn btn-danger btn-sm display-on">Отмена</button>
+            </div>
+        </form>
+    </div>
+    <div id="editPanel" class="panel panel-primary">
+        <div class="panel-heading">Редактирование</div>
+        <form id="editform">
+            <table class="table">
+                <tr>
+                    <th></th>
+                    <th>@Html.LabelFor(c => c.First().Name)</th>
+                    <th>@Html.LabelFor(c => c.First().Location)</th>
+                    <th>@Html.LabelFor(c => c.First().DateOfFoundation)</th>
+                    <th>@Html.LabelFor(c => c.First().Active)</th>
+                </tr>
+                <tr>
+                    <td><input id="editID" name="ID" readonly type="hidden" /></td>
+                    <td><input id="editName" name="Name" /></td>
+                    <td><input id="editLocation" name="Location" /></td>
+                    <td><input id="editDate" name="DateOfFoundation" type="date" /></td>
+                    <td>@Html.CheckBox("Active", new { @id = "editActive" })</td>
+                    <td></td>
+                </tr>
+            </table>
+            <div id="editerrors" style="color:red;padding: 0 0 0 15px;"></div>
+            <div class="form-buttons">
+                <button id="saveEdit" class="btn btn-success btn-sm">Сохранить</button>
+                <button class="btn btn-danger btn-sm display-on">Отмена</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <button class="btn btn-default display-mode" id="addButton">Добавить</button>
