--- a/Phones/Views/ModelTable/Phones.cshtml
+++ b/Phones/Views/ModelTable/Phones.cshtml
@@ -64,15 +64,15 @@
                 $(".addInput").val("");
                 $("#addButton").css('display', 'none');
                 $(".display-mode").attr("disabled", true);
-                $("#editform").css('display', 'none');
-                $("#addform").css('display', 'block');
+                $("#editPanel").css('display', 'none');
+                $("#addPanel").css('display', 'block');
             });
             $(".display-on").click(function (event) {
                 event.preventDefault();
                 $("#addButton").css('display', 'block');
                 $(".display-mode").attr("disabled", false);
-                $("#addform").css('display', 'none');
-                $("#editform").css('display', 'none');
+                $("#addPanel").css('display', 'none');
+                $("#editPanel").css('display', 'none');
             });
             $(".edit-on").click(function (event) {
                 event.preventDefault();
@@ -87,8 +87,8 @@
                         $("#editCompany").val(data.CompanyID);
                         $("#addButton").css('display', 'none');
                         $(".display-mode").attr("disabled", true);
-                        $("#addform").css('display', 'none');
-                        $("#editform").css('display', 'block');
+                        $("#addPanel").css('display', 'none');
+                        $("#editPanel").css('display', 'block');
                     }
                 });
             })
@@ -103,7 +103,7 @@
                         location.reload();
                     }
                 })
-            })            
+            })
         }
     </script>
 }
@@ -111,52 +111,61 @@
 @grid.GetHtml("table",columns: grid.Columns(grid.Column("ID", "ID"),
                                     grid.Column("Name", "Наименование"),
                                     grid.Column("Company.Name",header: "Компания"),
-                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-info btn-sm edit-on display-mode">Редактировать</button>
-                                                               <button id="@item.ID" class="btn btn-danger btn-sm delete-btn display-mode">Удалить</button></text>)))
+                                    grid.Column(format: @<text><button id="@item.ID" class="btn btn-primary btn-sm edit-on display-mode">Редактировать</button>
+                                        <button id="@item.ID" class="btn btn-danger btn-sm delete-btn display-mode">Удалить</button></text>)))
 
 
 <div>
-    <form id="addform">
-        <p><div id="adderrors" style="color:red;"></div></p>
-        <table class="table">
-            <tr>
-                <th></th>
-                <th>@Html.LabelFor(p => p.First().Name)</th>
-                <th>@Html.LabelFor(p => p.First().CompanyID)</th>
-                <th></th>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input id="addName" class="addInput" name="Name" />
-                </td>
-                <td>@Html.DropDownList("CompanyID", null, "Выберите компанию", new { @id = "addCompany", @class = "addInput" })</td>
-                <td></td>
-            </tr>
-        </table>
-        <button id="saveAdd" class="btn btn-primary btn-sm">Сохранить</button>
-        <button class="btn btn-danger btn-sm display-on">Отмена</button>
-    </form>
-
-    <form id="editform">
-        <p><div id="editerrors" style="color:red;"></div></p>
-        <table class="table">
-            <tr>
-                <th></th>
-                <th>@Html.LabelFor(p => p.First().Name)</th>
-                <th>@Html.LabelFor(p => p.First().CompanyID)</th>
-            </tr>
-            <tr>
-                <td><input id="editID" name="ID" type="hidden" readonly /></td>
-                <td>
-                    <input id="editName" name="Name" required />
-                </td>
-                <td>@Html.DropDownList("CompanyID",null,new { @id = "editCompany" })</td>
-            </tr>
-        </table>
-        <button class="btn btn-primary btn-sm" id="saveEdit">Сохранить</button>
-        <button class="btn btn-danger btn-sm display-on">Отмена</button>
-    </form>
+    <div id="addPanel" class="panel panel-primary">
+        <div class="panel-heading">Добавление</div>
+        <form id="addform">
+            <table class="table">
+                <tr>
+                    <th></th>
+                    <th>@Html.LabelFor(p => p.First().Name)</th>
+                    <th>@Html.LabelFor(p => p.First().CompanyID)</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input id="addName" class="addInput" name="Name" />
+                    </td>
+                    <td>@Html.DropDownList("CompanyID", null, "Выберите компанию", new { @id = "addCompany", @class = "addInput" })</td>
+                    <td></td>
+                </tr>
+            </table>
+            <div id="adderrors" style="color:red;padding: 0 0 0 15px;"></div>
+            <div class="form-buttons">
+                <button id="saveAdd" class="btn btn-success btn-sm">Сохранить</button>
+                <button class="btn btn-danger btn-sm display-on">Отмена</button>
+            </div>
+        </form>
+    </div>
+    <div id="editPanel" class="panel panel-primary">
+        <div class="panel-heading">Редактирование</div>
+        <form id="editform">
+            <table class="table">
+                <tr>
+                    <th></th>
+                    <th>@Html.LabelFor(p => p.First().Name)</th>
+                    <th>@Html.LabelFor(p => p.First().CompanyID)</th>
+                </tr>
+                <tr>
+                    <td><input id="editID" name="ID" type="hidden" readonly /></td>
+                    <td>
+                        <input id="editName" name="Name" required />
+                    </td>
+                    <td>@Html.DropDownList("CompanyID", null, new { @id = "editCompany" })</td>
+                </tr>
+            </table>
+            <div id="editerrors" style="color:red;padding: 0 0 0 15px;"></div>
+            <div class="form-buttons">
+                <button class="btn btn-success btn-sm" id="saveEdit">Сохранить</button>
+                <button class="btn btn-danger btn-sm display-on">Отмена</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <button class="btn btn-default display-mode" id="addButton">Добавить</button>
